# deepsleep-re

./: CHANGELOG.md  CITATION.cff  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/: FUNDING.yml
.github/DISCUSSION_TEMPLATE/: q-and-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: publish.yml  update-downloads.yml
docs/: getting-started.md  mcp-server.md  neural-link.md  vscode-extension.md
mascot/: index.html
scripts/: gen_downloads_badge.py  gen_mascot_badge.py  gen_robot_gif.py
src/deepsleep_ai/: __init__.py  cli.py  config.py  llm_client.py  mcp_server.py  memory_manager.py  neural_link.py  watcher.py
tests/: conftest.py  test_cli.py  test_concurrency.py  test_encryption.py  test_export.py  test_forget.py  test_memory_manager.py  test_neural_link.py  test_security.py
vscode-extension/: package-lock.json  package.json
vscode-extension/src/: DataReader.ts  SessionTracker.ts  SidebarProvider.ts  extension.ts
