[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepsleep-ai"
version = "0.2.3"
description = "🧠 DeepSleep: The open-source local AI memory for developers. A zero-cost coding agent with idle-time dreaming, MCP server support, and Neural Link cross-project search. Powered by Ollama & DeepSeek."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
  { name = "Keshav Sharma" }
]
keywords = [
  "agent",
  "ai-agent",
  "cli",
  "coding-agent",
  "ollama",
  "deepseek",
  "deepseek-r1",
  "watchdog",
  "memory",
  "developer-tools",
  "local-ai",
  "local-llm",
  "terminal-ai",
  "mcp",
  "model-context-protocol",
  "cursor",
  "windsurf",
  "claude-desktop",
  "open-source-ai",
  "coding-memory",
  "autonomous-agent",
  "ai-assistant",
  "copilot",
  "github-copilot-alternative",
  "ai-coding-buddy",
  "neural-link",
  "productivity-tools",
  "software-development",
  "llm-memory",
  "context-window-optimizer"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "typer>=0.12,<1.0",
  "watchdog>=4.0,<7.0",
  "prompt-toolkit>=3.0,<4.0",
  "filelock>=3.13",
  "pathspec>=0.12",
  "cryptography>=42.0",
  "structlog>=24.1",
  "pydantic-settings>=2.2"
]

[project.optional-dependencies]
mcp = [
  "mcp>=1.0; python_version>='3.10'"
]
dev = [
  "pytest>=8.0,<9.0"
]

[project.urls]
Homepage = "https://github.com/Keshavsharma-code/DeepSleep-beta"
Repository = "https://github.com/Keshavsharma-code/DeepSleep-beta"
Issues = "https://github.com/Keshavsharma-code/DeepSleep-beta/issues"
Changelog = "https://github.com/Keshavsharma-code/DeepSleep-beta/releases"

[project.scripts]
ds = "deepsleep_ai.cli:main"
deepsleep-mcp = "deepsleep_ai.mcp_server:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
